k8s/productivity/hoarder/chrome-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoarder-chrome
  namespace: productivity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoarder-chrome
  template:
    metadata:
      labels:
        app: hoarder-chrome
    spec:
      containers:
        - name: chrome
          image: gcr.io/zenika-hub/alpine-chrome:124
          command:
            - chromium-browser
            - --headless
            - --no-sandbox
            - --disable-gpu
            - --disable-dev-shm-usage
            - --remote-debugging-address=0.0.0.0
            - --remote-debugging-port=9222
            - --hide-scrollbars
          resources:
            requests:
              memory: 1Gi
              cpu: "1"
            limits:
              memory: 2Gi
              cpu: "2"
          ports:
            - containerPort: 9222
              protocol: TCP
              name: debug
          startupProbe:
            httpGet:
              path: /json/version
              port: debug
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /json/version
              port: debug
          livenessProbe:
            httpGet:
              path: /json/version
              port: debug
            failureThreshold: 10
