k8s/productivity/hoarder/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoarder-web
  namespace: productivity
  annotations:
    secrets.infisical.com/auto-reload: "true"
    reloader.stakater.com/auto: "true"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: hoarder-web
  template:
    metadata:
      labels:
        app: hoarder-web
    spec:
      containers:
        - name: web
          image: ghcr.io/hoarder-app/hoarder:0.33.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            requests:
              memory: 2Gi
              cpu: "1"
            limits:
              memory: 3Gi
              cpu: "2"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: hoarder
