k8s/productivity/hoarder/meilisearch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoarder-meilisearch
  namespace: productivity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoarder-meilisearch
  template:
    metadata:
      labels:
        app: hoarder-meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.11.1
          ports:
            - containerPort: 7700
              protocol: TCP
              name: http
          startupProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
          livenessProbe:
            httpGet:
              path: /health
              port: http
          volumeMounts:
            - mountPath: /meili_data
              name: meilisearch
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 500m
      volumes:
        - name: meilisearch
          persistentVolumeClaim:
            claimName: hoarder-meilisearch
