k8s/productivity/hoarder/meilisearch-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hoarder-meilisearch
  namespace: productivity
spec:
  selector:
    app: hoarder-meilisearch
  ports:
    - protocol: TCP
      port: 7700
      targetPort: 7700
