k8s/productivity/hoarder/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hoarder-web
  namespace: productivity
spec:
  selector:
    app: hoarder-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
